--- a/order-summary-component-main/index.html
+++ b/order-summary-component-main/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | Order summary card</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -15,23 +15,45 @@
   </style>
 </head>
 <body>
+  <div class="container">
 
-  Order Summary
+    <div class="hero">
+      <img src="images/illustration-hero.svg" alt="">
+    </div>
 
-  You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!
+    <div class="text-content">
 
-  Annual Plan
-  $59.99/year
+      <h2 class="title">
+        Order Summary
+      </h2>
 
-  Change
+      <p class="subtitle">
+        You can now listen to millions of songs, audiobooks, and podcasts on any 
+        device anywhere you like!
+      </p>
 
-  Proceed to Payment
-  Cancel Order
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+      <div class="plan-box">
+
+        <div class="plan-box-left">
+
+          <img src="images/icon-music.svg" alt="">
+
+          <div>
+            <h5>Annual Plan</h5>
+            <p>$59.99/year</p>
+          </div>
+
+        </div>
+
+        <a href="#">Change</a>
+
+      </div>
+
+      <a href="#" class="proceed-btn">Proceed to Payment</a>
+      <a href="#" class="cancel-btn">Cancel Order</a>
+
+    </div>
   </div>
+  
 </body>
 </html>
